tests/ui/parser/removed-syntax/removed-syntax-field-let.rs
struct S {
    let foo: (),
    //~^  ERROR expected identifier, found keyword `let`
}

fn main() {}
